unpackaged/objects/Refined_pricebook_connection__c.object
<CustomObject>
  <fields>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Account.RecordTypeId</field>
        <operation>equals</operation>
        <value>ERP Distributor, Non-ERP Distributor</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Refined pricebook connections</relationshipLabel>
    <relationshipName>Refined_pricebook_connections</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Refined_pricebook_type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refined pricebook type</label>
    <referenceTo>Refined_pricebook_type__c</referenceTo>
    <relationshipLabel>Refined pricebook connections</relationshipLabel>
    <relationshipName>Refined_pricebook_connections</relationshipName>
    <type>Lookup</type>
  </fields>
  <label>Refined pricebook connection</label>
  <nameField>
    <label>Refined pricebook connection Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Refined pricebook connections</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>